test_regress/t/t_assert_ctl_unsup.out
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:25:7: Unsupported: non-constant assert assertion-type expression
                                               : ... note: In instance 't.unsupported_ctl_type'
   25 |       $assertcontrol(Lock, a);
      |       ^~~~~~~~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:27:7: Unsupported assertcontrol control_type
   27 |       $assertcontrol(Unlock);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:29:7: Unsupported assertcontrol control_type
   29 |       $assertcontrol(PassOn);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:30:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   30 |       $assertpasson;
      |       ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:31:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   31 |       $assertpasson(a);
      |       ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:32:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   32 |       $assertpasson(a, t);
      |       ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:34:7: Unsupported assertcontrol control_type
   34 |       $assertcontrol(PassOff);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:35:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   35 |       $assertpassoff;
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:36:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   36 |       $assertpassoff(a);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:37:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   37 |       $assertpassoff(a, t);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:39:7: Unsupported assertcontrol control_type
   39 |       $assertcontrol(FailOn);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:40:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   40 |       $assertfailon;
      |       ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:41:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   41 |       $assertfailon(a);
      |       ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:42:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   42 |       $assertfailon(a, t);
      |       ^~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:44:7: Unsupported assertcontrol control_type
   44 |       $assertcontrol(FailOff);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:45:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   45 |       $assertfailoff;
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:46:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   46 |       $assertfailoff(a);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:47:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   47 |       $assertfailoff(a, t);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:49:7: Unsupported assertcontrol control_type
   49 |       $assertcontrol(NonvacuousOn);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:50:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   50 |       $assertnonvacuouson;
      |       ^~~~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:51:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   51 |       $assertnonvacuouson(a);
      |       ^~~~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:52:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   52 |       $assertnonvacuouson(a, t);
      |       ^~~~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:54:7: Unsupported assertcontrol control_type
   54 |       $assertcontrol(VacuousOff);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:55:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   55 |       $assertvacuousoff;
      |       ^~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:56:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   56 |       $assertvacuousoff(a);
      |       ^~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:57:7: Unsupported: assert control assertion_type
                                               : ... note: In instance 't.unsupported_ctl_type'
   57 |       $assertvacuousoff(a, t);
      |       ^~~~~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:64:7: Unsupported: non-const assert control type expression
                                               : ... note: In instance 't.unsupported_ctl_type_expr'
   64 |       $assertcontrol(ctl_type);
      |       ^~~~~~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:93:10: Unsupported: assertcontrols in classes or interfaces
                                                : ... note: In instance 't.assert_class'
   93 |          $asserton;
      |          ^~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:99:10: Unsupported: assertcontrols in classes or interfaces
                                                : ... note: In instance 't.assert_class'
   99 |          $assertoff;
      |          ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:172:7: Unsupported: assertcontrols in classes or interfaces
                                                : ... note: In instance 't.assert_iface'
  172 |       $assertoff;
      |       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:138:7: Unsupported: assertcontrols in classes or interfaces
                                                : ... note: In instance 't.assert_iface_class'
  138 |       $assertoff;
      |       ^~~~~~~~~~
%Error-UNSUPPORTED: t/t_assert_ctl_unsup.v:145:7: Unsupported: assertcontrols in classes or interfaces
                                                : ... note: In instance 't.assert_iface_class'
  145 |       $asserton;
      |       ^~~~~~~~~
%Error: Exiting due to
